--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "react-router-dom": "^6.27.0"
   }
 }
